Bug 272466 - Submit replies in forums bugzilla trackers etc are counted as double
Summary: Submit replies in forums bugzilla trackers etc are counted as double
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.6.2
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 273131 273275 273482 274167 275107 275723 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-04 19:18 UTC by Dimitrios Glentadakis
Modified: 2011-06-15 18:33 UTC (History)
16 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The warning message after submitting this report (194.06 KB, image/png)
2011-05-04 19:20 UTC, Dimitrios Glentadakis
Details
Another screenshot (42.88 KB, image/png)
2011-05-10 20:14 UTC, Cristian Oneț
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitrios Glentadakis 2011-05-04 19:18:30 UTC
Version:           4.6.2
OS:                Linux

When replying in a forum, bugzilla tracker etc the post is counted as double
I am redirected in a page with the message that in the middle another user has posted a newer message (me) this happens in bugzilla of mageia and KDE, and in the preview page in phpbb3 forum tested in mageia's forum

Reproducible: Always

Steps to Reproduce:
Reply to a message

Actual Results:  
redirected to a double message warning page
Video: http://glenbox.free.fr/files/mageia_forum.ogv 4MB
https://forums.mageia.org/en/viewtopic.php?f=18&t=149

Expected Results:  
send the message normaly as a single reply

OS: Linux (x86_64) release 2.6.38.5-desktop-0.rc1.1.mga
Compiler: gcc
Comment 1 Dimitrios Glentadakis 2011-05-04 19:20:50 UTC
Created attachment 59623 [details]
The warning message after submitting this report
Comment 2 Duncan 2011-05-07 04:33:10 UTC
I see the bug the bug here, too, only it's on 4.6.3 -- I did NOT notice it on 4.6.2, but DID file or update a number of bugs in the 4.6.2 timeframe so SHOULD have seen it if it was in Gentoo's 4.6.2.

As such, if the original 4.6.2 version report is correct, consider either those patches NOT in 4.6.2 kde upstream that were applied to Mageia for 4.6.2, and are in 4.6.3 upstream, OR patches applied by Gentoo to 4.6.2 that aren't yet applied to Gentoo's 4.6.3 or upstream, as one such patch appears to have introduced the regression.

Additional note, potentially important for repeatability:  I run privoxy here on the same machine and all web connections proxy thru it.  For https connections it simply relays them straight thru, so it's not privoxy tampering with the content, but the problem MAY only appear when running thru a proxy.  Dimitrios, do you run thru a proxy of any sort?

(Gentoo/kde overlay user.)
Comment 3 Duncan 2011-05-07 05:47:41 UTC
[Just testing the proxy theory, results to be posted...]
Comment 4 Duncan 2011-05-07 05:53:23 UTC
With konqueror configured NOT to use the proxy for bugs.kde.org (and with no proxy log hits showing up, confirming the setting), submitting the above comment STILL triggered the double-posting bug.  So it's apparently *NOT* proxy related.
Comment 5 Dimitrios Glentadakis 2011-05-07 08:52:55 UTC
i confirm i dont use a proxy
Comment 6 Dimitrios Glentadakis 2011-05-07 09:02:40 UTC
related discution in kde forums:
http://forum.kde.org/viewtopic.php?f=18&t=94957

If it helps, the bug it is nt present with webkit
Comment 7 Albert Astals Cid 2011-05-07 12:45:24 UTC
Never happened to me with 4.6.2, happens now with 4.6.3
Comment 8 Albert Astals Cid 2011-05-07 19:09:22 UTC
If i revert the whole kdelibs/kio to the v4.6.2 i don't get this problem anymore, i'll try some bisecting to see what commit introduced it
Comment 9 Albert Astals Cid 2011-05-07 19:47:28 UTC
For more reference
a3297d274843c22ee8f5c4ede64f9c62311ade37 works
1317e6e22057d6080ab4279cfd50330cdd43b522 does not work
All the changes in between are by adawit so i'm adding him to this bug hoping he'll fix what he broke
Comment 10 Maksim Orlovich 2011-05-08 18:07:57 UTC
Seems fine in trunk though.
Comment 11 Cristian Oneț 2011-05-10 20:12:37 UTC
I also would like to confirm this BUG on 4.6.3.
Comment 12 Cristian Oneț 2011-05-10 20:14:41 UTC
Created attachment 59879 [details]
Another screenshot
Comment 13 Tommi Tervo 2011-05-12 16:56:09 UTC
*** Bug 273131 has been marked as a duplicate of this bug. ***
Comment 14 Tommi Tervo 2011-05-14 18:20:03 UTC
*** Bug 273275 has been marked as a duplicate of this bug. ***
Comment 15 Cristian Oneț 2011-05-15 08:02:38 UTC
(In reply to comment #9)
> All the changes in between are by adawit so i'm adding him to this bug hoping
> he'll fix what he broke
Shortly after you added adawit to the bug he removed himself, I hope that this doesn't mean he won't fix it.
Comment 16 Roman Fietze 2011-05-15 10:54:18 UTC
*** This bug has been confirmed by popular vote. ***
Comment 17 Albert Astals Cid 2011-05-15 13:33:56 UTC
Maksim actually has a fix that fixes the problem, i think he will commit it soon (hopefully soon).
Comment 18 Duncan 2011-05-15 22:34:52 UTC
It'd be useful if he posted the patch here.  Some of us are Gentoo or LFS users or otherwise compiled from sources, and could use it.  And distros of course could test and then apply the patch as well.

But perhaps he's still testing it, himself.  In any case, good to read that a fix is known and on the way. =:^)
Comment 19 jajaX 2011-05-16 15:04:01 UTC
Hi ! (sorry for my bad english)

I have got a same problem since 4.6.3 update for only one kubuntu 11.04 (other works fine).

problem for forum.kubuntu-fr.org and other website.

display with konqueror + ktml under konsole =>

jaja@quadcore:~$ konqueror 
QFSFileEngine::open: No file name specified
konqueror(5832) OpenSearchManager::setSearchProvider: "Cannot open opensearch description file: " 
QInotifyFileSystemWatcherEngine::addPaths: inotify_add_watch failed: Aucun fichier ou dossier de ce type
QFileSystemWatcher: failed to add paths: /home/jaja/.config/ibus/bus
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::restore: Unbalanced save/restore
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::save: Painter not active
QPainter::setRenderHint: Painter must be active to set rendering hints
QPainter::fillPath: Painter not active
QPainter::restore: Unbalanced save/restore
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
Enchant dict for "fr" 0x98bf0c8 
Enchant dict for "fr" 0x98c19d0 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::hasClipping: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::drawRects: Painter not active
QPainter::setPen: Painter not active
QPainter::worldTransform: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
QPainter::setFont: Painter not active
QPainter::fontMetrics: Painter not active
QPainter::setPen: Painter not active
QPainter::setBrush: Painter not active
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
QWidget::repaint: Recursive repaint detected
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
QWidget::repaint: Recursive repaint detected
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
Enchant dict for "fr" 0x9c27fe8 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
Enchant dict for "fr" 0x9e111a0 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
Enchant dict for "fr" 0x95a2020 
QPainter::begin: Widget painting can only begin as a result of a paintEvent
QPainter::translate: Painter not active
QPainter::setClipRect: Painter not active
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "rekonq" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "firefox" with KXMLGUIFactory! 
konqueror(5832)/kdeui (kdelibs): Attempt to use QAction "" with KXMLGUIFactory! 

note : installed packages under kubuntu 11.04 + KDE SC 4.6.3 (from ppa kubuntu updates) =>

- konqueror (4.6.3)
- konqueror-nsplugins (4.6.3)
- konqueror-plugin-searchbar (4.4.4)
- konq-plugins-l10n (4.4.4)
- konq-plugins (4.4.4)
Comment 20 Maksim Orlovich 2011-05-17 14:35:42 UTC
Git commit 92db24adfa941003db1d885df01157056617f30b by Maks Orlovich.
Committed on 08/05/2011 at 20:39.
Pushed by orlovich into branch 'KDE/4.6'.

Fix the job-on-hold reuse logic, which caused the double-POST problem)

adawit, could you please at least READ what you're backporting if you are
going to be this aggressive? Or better yet, please don't backport anything
that's not fixing a critical bug or is trivial, as per:
http://techbase.kde.org/Policies/Minor_Point_Release_Policy

CCMAIL: adawit@kde.org
BUG: 272466

M  +1    -1    kio/kio/scheduler.cpp     

http://commits.kde.org/kdelibs/92db24adfa941003db1d885df01157056617f30b
Comment 21 Tommi Tervo 2011-05-17 17:18:11 UTC
*** Bug 273482 has been marked as a duplicate of this bug. ***
Comment 22 Tommi Tervo 2011-05-26 08:16:46 UTC
*** Bug 274167 has been marked as a duplicate of this bug. ***
Comment 23 Toralf Förster 2011-06-05 10:32:28 UTC
BTW I experienced this bug only for bugs.kde.org ... ;)
Comment 24 Tommi Tervo 2011-06-07 13:59:38 UTC
*** Bug 275107 has been marked as a duplicate of this bug. ***
Comment 25 Tommi Tervo 2011-06-15 18:15:26 UTC
*** Bug 275723 has been marked as a duplicate of this bug. ***
Comment 26 Toralf Förster 2011-06-15 18:33:46 UTC
I experienced this under FireFox too.