Fix the job-on-hold reuse logic, which caused the double-POST problem)

adawit, could you please at least READ what you're backporting if you are
going to be this aggressive? Or better yet, please don't backport anything
that's not fixing a critical bug or is trivial, as per:
http://techbase.kde.org/Policies/Minor_Point_Release_Policy

CCMAIL: adawit@kde.org
BUG: 272466